Fixed: preload messages not showing the correct font style on Firefox and Safari

--- a/src/globalStyles/loader.css
+++ b/src/globalStyles/loader.css
@@ -28,7 +28,7 @@
   height: 21px;
   position: relative;
   width: 100%;
-  border: 1px solid white;
+  /*border: 1px solid white;*/
 }
 .loader .typing {
   white-space: nowrap;
